fix/page width caused text wrapping

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -121,7 +121,7 @@ input:invalid {
 
 /*  styles below have been from https://webdesign.tutsplus.com/tutorials/building-responsive-forms-with-flexbox--cms-26767 */
 .flex-outer-1 {
-	max-width: 500px;
+	max-width: 550px;
 	margin: 0 auto;
 }
 .flex-outer-1 li {
